--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <li><h3>Третий вариант не существует</h3></li>
 </ul>
 </ol>
-<img src="example.jpg" alt="Пример изображения" class="img-example"> 
+<source src="Happy.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'> 
       <p data-type="info">Информационный текст</p> 
       <p data-type="warning">Предупреждающий текст</p> 
       <p data-type="error">Текст ошибки</p> 
