--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html lang="ru">
 <meta charset="utf-8">
 <body bgcolor="#FFFACD">
+    <source src="Happy.mp4"> 
     <p id="para1">Параграф 1</p> 
       <p id="para2">Параграф 2</p> 
       <p id="para3">Параграф 3</p> 
@@ -44,7 +45,7 @@
 <li><h3>Третий вариант не существует</h3></li>
 </ul>
 </ol>
-<source src="Happy.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'> 
+
       <p data-type="info">Информационный текст</p> 
       <p data-type="warning">Предупреждающий текст</p> 
       <p data-type="error">Текст ошибки</p> 
