--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <html lang="ru">
 <meta charset="utf-8">
 <body bgcolor="#FFFACD">
-    <source src="Happy.mp4"> 
+  <video width="400" height="300" controls="controls" poster="video/duel.jpg">
+   <source src="Happy.mp4" type='video/ogg; codecs="theora, vorbis"'>
+   <a href="Happy.mp4">Скачайте видео</a>.
+  </video>
     <p id="para1">Параграф 1</p> 
       <p id="para2">Параграф 2</p> 
       <p id="para3">Параграф 3</p> 
