--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <html lang="ru">
 <meta charset="utf-8">
 <body bgcolor="#FFFACD">
+  <style type="text/css".block1 width: 538;height: 430;background: url(Happy.mp4);float: none;
+.block1 object {margin: 0 auto; padding-top: 18;}
+</style>
+<div class="block1">
+<center><object data="http://delaisait.ucoz.ru/script/video/uppod/uppod.swf" height="700" type="application/x-shockwave-flash" width="900"><param name="allowFullScreen" value="true" /><param name="allowScriptAccess" value="always" /><param name="wmode" value="transparent" /><param name="movie" value="http://delaisait.ucoz.ru/script/video/uppod/uppod.swf" /><param name="flashvars" value="st=http://delaisait.ucoz.ru/script/video/uppod/pp500x281.txt&file=http://youtu.be/jCKO7Pya6S8" /></object></center>
+</div>
   <video width="800" height="600" controls="controls" poster="video/duel.jpg">
    <source src="Happy.mp4" type='video/ogg; codecs="theora, vorbis"'>
    <a href="Happy.mp4">Скачайте видео</a>.
@@ -18,7 +24,7 @@
 <h6>5 СПАТЬ СПАТЬ СПАТЬ и ТОЧка!!!!!!!</h6>
 <a href="https://html-css-js.com/">Сайт помощьник1</a>.
 <a href="https://www.w3schools.com/">Сайт помощьник2</a>
-<font face=”Arial” size=”8” color=”red” >Я люблю котиков и липтон , но больше всего я ЛюБлЮ СПАТЬ</font>
+<font face"Arial" size="8" color="red" >Я люблю котиков и липтон , но больше всего я ЛюБлЮ СПАТЬ</font>
 <font color=’#191970’>Котики = спать , я = спать</font>
 <MARQUEE BEHAVIOR=slide>
 я люблю спать
