--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <html lang="ru">
 <meta charset="utf-8">
 <body bgcolor="#FFFACD">
-  <style type="text/css".block1 width: 538;height: 430;background: url(Happy.mp4);float: none;
-.block1 object {margin: 0 auto; padding-top: 18;}
-</style>
+<link rel="stylesheet" href="custom.css">
+
 <div class="block1">
 <center><object data="http://delaisait.ucoz.ru/script/video/uppod/uppod.swf" height="700" type="application/x-shockwave-flash" width="900"><param name="allowFullScreen" value="true" /><param name="allowScriptAccess" value="always" /><param name="wmode" value="transparent" /><param name="movie" value="http://delaisait.ucoz.ru/script/video/uppod/uppod.swf" /><param name="flashvars" value="st=http://delaisait.ucoz.ru/script/video/uppod/pp500x281.txt&file=http://youtu.be/jCKO7Pya6S8" /></object></center>
 </div>
